# BasicPicoProjects

./: README.md  pico_probe_circuit.drawio
baremetal/led-blink/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ELF2UF2Build.vcxproj  ELF2UF2Build.vcxproj.filters  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  do_nothing.sln  do_nothing.vcxproj  do_nothing.vcxproj.filters  how-to-build.txt  main.c
baremetal/led-blink/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
baremetal/led-blink/elf2uf2/tmp/: ELF2UF2Build-cfgcmd.txt  ELF2UF2Build-mkdirs.cmake
baremetal/led-blink/pico-sdk/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  pico_sdk.sln
baremetal/led-blink/pico-sdk/src/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/common/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/common/boot_picoboot/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/common/pico_base/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/common/pico_stdlib/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/common/pico_time/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/common/pico_util/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/rp2040/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/rp2040/hardware_regs/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/rp2040/hardware_structs/: cmake_install.cmake
baremetal/led-blink/pico-sdk/src/rp2_common/: cmake_install.cmake
baremetal/led-blink/pico-sdk/tools/: cmake_install.cmake
(+48 files in other folders)
